fix layout issue with css grid and the sidebar

--- a/assets/sass/_sidebar.scss
+++ b/assets/sass/_sidebar.scss
@@ -1,10 +1,14 @@
-#main-sidebar{
+#main-sidebar .sidebar-contain{
   background-color: #FFFFFF;
   border: 1px solid #EBEBEB;
   padding: 15px;
 
   .widget{
     margin-bottom: 15px;
+
+    h3{
+      color: $mainGreen;
+    }
   }
 
 }
